// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-image-compress > should accept \`...options: Options[]\` as parameter 1`] = `
[
  ImageMinimizerPlugin {
    "name": "@rsbuild/plugin-image-compress/minimizer",
    "options": {
      "test": /\\\\\\.\\(\\?:jpg\\|jpeg\\)\\$/,
      "use": "jpeg",
    },
  },
  ImageMinimizerPlugin {
    "name": "@rsbuild/plugin-image-compress/minimizer",
    "options": {
      "test": /\\\\\\.png\\$/,
      "use": "png",
    },
  },
]
`;

exports[`plugin-image-compress > should accept \`options: Options[]\` as parameter 1`] = `
[
  ImageMinimizerPlugin {
    "name": "@rsbuild/plugin-image-compress/minimizer",
    "options": {
      "test": /\\\\\\.\\(\\?:jpg\\|jpeg\\)\\$/,
      "use": "jpeg",
    },
  },
  ImageMinimizerPlugin {
    "name": "@rsbuild/plugin-image-compress/minimizer",
    "options": {
      "test": /\\\\\\.png\\$/,
      "use": "png",
    },
  },
]
`;

exports[`plugin-image-compress > should generate correct options 1`] = `
[
  ImageMinimizerPlugin {
    "name": "@rsbuild/plugin-image-compress/minimizer",
    "options": {
      "test": /\\\\\\.\\(\\?:jpg\\|jpeg\\)\\$/,
      "use": "jpeg",
    },
  },
  ImageMinimizerPlugin {
    "name": "@rsbuild/plugin-image-compress/minimizer",
    "options": {
      "test": /\\\\\\.png\\$/,
      "use": "png",
    },
  },
  ImageMinimizerPlugin {
    "name": "@rsbuild/plugin-image-compress/minimizer",
    "options": {
      "test": /\\\\\\.\\(\\?:ico\\|icon\\)\\$/,
      "use": "ico",
    },
  },
]
`;
